# sass-embedded-python

./: .age.toml  CHANGES.rst  README.rst  Taskfile.yaml  aqua.yaml  create_protobuf.py  hatch_build.py  lefthook.yaml  mise.toml  pyproject.toml  renovate.json5
.claude/: .gitignore
.github/: release-body.md
.github/workflows/: main.yaml  release.yaml  sync-dart-sass-version.yaml
docs/: conf.py  embedded_sass.proto  index.rst  usage.rst  versioning.rst
docs/usage/: index.rst  protocol.rst
src/sass_embedded/: __init__.py  _const.py  dart_sass.py  simple.py
src/sass_embedded/dart_sass/: __init__.py  __main__.py  installer.py
src/sass_embedded/protocol/: __init__.py  compiler.py  embedded_sass_pb2.py  embedded_sass_pb2.pyi  sass_function.py
tests/: test_compiler.py  test_dart_sass.py  test_env_dispatch.py  test_root.py  test_simple.py
tests/test-basics/custom/: style.compressed.css  style.expanded.css  style.sass  style.scss
tools/: sync-current-sass.py  sync-latest-sass.py  verify-wheel.py
