[project]
name = "sass-embedded"
version = "0.0.0"
description = "Sass/SCSS compiler for Python using Dart Sass"
readme = "README.rst"
authors = [
    { name = "Kazuya Takei", email = "myself@attakei.net" }
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "doc8>=1.1.2",
    "esbonio>=0.16.5",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
]
