[project]
name = "sass-embedded"
version = "0.0.0"
description = "Sass/SCSS compile host using Dart Sass"
readme = "README.rst"
authors = [
    { name = "Kazuya Takei", email = "myself@attakei.net" }
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Topic :: Utilities",
]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    {include-group = "docs-dev"},
    "doc8>=1.1.2",
    "esbonio>=0.16.5",
    "hatchling>=1.27.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]
docs = [
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=3.0.2",
]
docs-dev = [
    {include-group = "docs"},
    "sphinx-autobuild>=2024.10.3",
]

[tool.hatch.build.hooks.custom]

[tool.hatch.build.targets.sdist]
exclude = ["src/sass_embedded/dart_sass/_ext"]
